Fix layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -894,3 +894,9 @@ a {
   padding-top: 0;
   padding-bottom: 2rem;
 }
+
+/* Sign-up Callout */
+
+.callout-signup {
+  transform: translateY(5rem);
+}
